<resources>
    <string name="app_name">ALC4app</string>

    <string name="heading1">WELCOME TO ALC 4.0</string>
    <string name="sub_heading1">About ALC</string>
    <string name="sub_heading2">My Profile</string>
    <string name="name">Obinna Okeke</string>
    <string name="country">Nigeria</string>
    <string name="email">tobinna4@gmail.com</string>
    <string name="phone_number">+2348184450402</string>
    <string name="slack_username">@tonasoft</string>
    <string name="track">Android</string>

    <string name="track_tag">Track:</string>
    <string name="name_tag">Name:</string>
    <string name="country_tag">Country:</string>
    <string name="email_tag">Email:</string>
    <string name="phone_number_tag">Phone Number:</string>
    <string name="slack_username_tag">Slack Username:</string>
    <string name="todo">TODO</string>
</resources>
