<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".myprofile">

    <ImageView
            android:layout_width="156dp"
            android:layout_height="156dp"
            app:srcCompat="@drawable/obinna"
            android:id="@+id/imageView2" android:layout_marginEnd="142dp"
            android:layout_marginRight="142dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="141dp"
            android:layout_marginStart="141dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="176dp"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp" android:layout_marginRight="176dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>




    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/view2"
            android:background="#000000"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"/>

    <android.support.v7.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:id="@+id/l1"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <TextView
                android:text="@string/track_tag"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.35" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view2"/>
        <TextView
                android:text="@string/track"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:id="@+id/l2"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/l1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <TextView
                android:text="@string/country_tag"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.35" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view2"/>
        <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:id="@+id/l3"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/l2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <TextView
                android:text="@string/email_tag"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.35" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view2"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:id="@+id/l4"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/l3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <TextView
                android:text="@string/phone_number_tag"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.35" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view2"/>
        <TextView
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:id="@+id/l5"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/l4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <TextView
                android:text="@string/slack_username_tag"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.35" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view2"/>
        <TextView
                android:text="@string/slack_username"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.constraint.ConstraintLayout>