<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/heading1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/textView"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="92dp"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"

            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/button"/>
    <Button
            android:text="@string/sub_heading1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToAboutAlc"
            android:id="@+id/button"
            android:padding="4dp"
            android:background="#000000"
            android:textColor="#fff"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="58dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>
    <Button
            android:onClick="goToMyProfile"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sub_heading2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/button2"
            android:textColor="#fff"
            android:padding="4dp"
            android:background="#000000"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toTopOf="@+id/imageView"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/abstractbgk"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:layout_marginTop="16dp"/>
</android.support.constraint.ConstraintLayout>